[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/chook player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sounds/chook landing sound.wav" type="AudioStream" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5
bounce = 0.5

[sub_resource type="CircleShape2D" id=2]
radius = 31.6296

[node name="Player" type="RigidBody2D"]
z_index = 1
physics_material_override = SubResource( 1 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
z_index = 1
enabled = true
cast_to = Vector2( 1000, 0 )
collision_mask = 2
collide_with_areas = true

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="GrappleReady" type="Polygon2D" parent="."]
z_index = -1
polygon = PoolVector2Array( -40, -16, -40, 16, -16, 40, 16, 40, 40, 16, 40, -16, 16, -40, -16, -40 )

[node name="RayCast2D2" type="RayCast2D" parent="."]
enabled = true
collision_mask = 3

[connection signal="body_entered" from="." to="." method="hit_surface"]
